--- a/range/index.html
+++ b/range/index.html
@@ -31,8 +31,16 @@
           <a href="/counter">Counter</a><a href="/range">Range</a>
         </header>
         <div>
-          <button class="btn btn-danger" type="button">increment</button>
-          <p>0</p>
+          <input
+            class="form-control-range form-control"
+            id="ratyControlRange"
+            max="30"
+            min="6"
+            step="1"
+            type="range"
+            value="10"
+          />
+          <p>10</p>
         </div>
       </div>
     </div>
